Exception in console and broken right click after attempting to show context menu in Inspector https://bugs.webkit.org/show_bug.cgi?id=143556

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-04-08
Reviewed by Brady Eidson.

* Shared/mac/NativeContextMenuItem.mm:
(WebKit::NativeContextMenuItem::NativeContextMenuItem):
Add an ASSERT to immediately catch a menu item created with a nil native menu item.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::internalShowContextMenu):
Gracefully handle a null share context menu item.

Canonical link: https://commits.webkit.org/161588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182590 268f45cc-cd09-0410-ab3c-d52691b4dbfc